Fix/dark mode bug (#2)
* fix: Attempt to fix prefers-color-scheme

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,9 @@ body {
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
 }
+
+@media (orientation: portrait) {
+	body {
+		position: fixed;
+	}
+}
